2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b86

	* Bugfix: Now correctly fixed #907950.

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b85

	* Change: removed doubled cvs id in setup/config_data.inc
		  (Thanks to Vallimar)

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b84

	* Change: Again some code cleanup in lib/lang.php

	* Change: Replaced $GALLERY_BASEDIR in:
	  - ALL in init.php, user_preferences.php, tools/build_manifest.php, tools/g1-report.php,
		   tools/g1-makereport.php, slideshow.php, html_wrap/inline_gallerythumb.frame.default,
		   html_wrap/inline_gallerythumb.frame.default, html_wrap/inline_imagewrap.inc,
		   html_wrap/inline_photothumb.frame.default, html_wrap/inline_photo.frame.default,
		   html_wrap/inline_albumthumb.frame.default, html_wrap/inline_moviethumb.frame.default

	  - SOME in util.php

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b83

	* Change: Reworked lib/lang.php. This should also fix Bug #907950

	* Bugfix: Replaced some short php tags in GeekLog classes.

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b82

	* Bugfix: Fixed Jay's fix of Bug 904957 in b76.
		  Check was against $constant, but should against $real.

	* New: Gallery now uses GeekLogs Language.

	* Bugfix: Fixed problems where URLs to skin were wrong when no
		  or empty config.php

	* Changed: Changed Windows CRLF to Unix style in GeekLog classes.

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b81

	* 884488: 'else' required to NULL $myAlbum, otherwise the first
	  album name will propogate to the descriptions of all following
	  items. (Visual issue only)

2004-03-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-80

	* Tweaked a very small UI issue with the documentation link.
	  Bug #907219

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b79

	* Correction for 884488:  Rasmus Lerdorf noticed my missing isset()

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b78
